added new projects to portfolio and labels and images

--- a/portfolio.html
+++ b/portfolio.html
@@ -39,10 +39,66 @@
       <h1 class="pt-3">My Work</h1>
       <hr class="pb-1" />
       <div class="row">
+
+        <div class="col-lg-4">
+          <div class="card mb-3">
+            <img class="card-img-top img-fluid" src="assets/images/sunaya.png" alt="preview of SPACE-DASH">
+            <article class="card-body">
+              <span class="badge badge-dark">Node.js</span><span class="badge badge-light">Sequelize</span>
+              <span class="badge badge-success">jQuery</span><span class="badge badge-warning">CSS</span>
+              <span class="badge badge-info">HTML</span><span class="badge badge-danger">API</span>
+              <h5 class="card-title">Sunaya</h5>
+              <p class="card-text">Project two (group): a fullstack application designed to 
+                bring more mindfulness into your daily life.</p>
+              <a href="https://mysanaya.herokuapp.com/" target="_blank" class="btn btn-primary">Heroku page</a>
+              <a href="https://github.com/rubybassi/sanaya" target="_blank" class="btn btn-primary">Github repo</a>
+            </article>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="card mb-3">
+            <img class="card-img-top img-fluid" src="assets/images/note-taker.png" alt="preview of SPACE-DASH">
+            <article class="card-body">
+              <span class="badge badge-dark">Node.js</span><span class="badge badge-warning">CSS</span>
+              <span class="badge badge-info">HTML</span>
+              <h5 class="card-title">Handy Note Taker</h5>
+              <p class="card-text">Note taking app that can be used to write, save, and delete notes built using node express.</p>
+              <a href="https://handy-note-taker-express.herokuapp.com/" target="_blank" class="btn btn-primary">Heroku page</a>
+              <a href="https://github.com/rubybassi/handy-note-taker" target="_blank" class="btn btn-primary">Github repo</a>
+            </article>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="card mb-3">
+            <img class="card-img-top img-fluid" src="assets/images/team-generator.png" alt="preview of SPACE-DASH">
+            <article class="card-body">
+              <span class="badge badge-dark">Node.js</span><span class="badge badge-warning">CSS</span>
+              <span class="badge badge-info">HTML</span>
+              <h5 class="card-title">My Team Generator</h5>
+              <p class="card-text">A Node CLI that takes in information about employees and generates an HTML webpage.</p>
+              <a href="https://www.youtube.com/watch?v=nbFUqCOI3fQ&feature=youtu.be" target="_blank" class="btn btn-primary">YouTube demo</a>
+              <a href="https://github.com/rubybassi/my-team-generator" target="_blank" class="btn btn-primary">Github repo</a>
+            </article>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="card mb-3">
+            <img class="card-img-top img-fluid" src="assets/images/readme.png" alt="preview of SPACE-DASH">
+            <article class="card-body">
+              <span class="badge badge-dark">Node.js</span>
+              <h5 class="card-title">Handy README Generator</h5>
+              <p class="card-text">A Node CLI that dynamically generates a professional README.md file from a user's input using the Inquirer package.</p>
+              <a href="https://www.youtube.com/watch?v=M6oav3l6Iko&feature=youtu.be" target="_blank" class="btn btn-primary">YouTube demo</a>
+              <a href="https://github.com/rubybassi/handy-README-generator" target="_blank" class="btn btn-primary">Github repo</a>
+            </article>
+          </div>
+        </div>
         <div class="col-lg-4">
           <div class="card mb-3">
             <img class="card-img-top img-fluid" src="assets/images/space-dash-small.png" alt="preview of SPACE-DASH">
             <article class="card-body">
+              <span class="badge badge-success">jQuery</span><span class="badge badge-warning">CSS</span>
+              <span class="badge badge-info">HTML</span><span class="badge badge-danger">API</span>
               <h5 class="card-title">SPACE-DASH</h5>
               <p class="card-text">Project one (group): a fun and interactive space app for young learners built using
                 five APIs including NASA and Mapbox.</p>
@@ -56,6 +112,8 @@
             <img class="card-img-top img-fluid" src="assets/images/weather-small.png"
               alt="preview of weather dashboard">
             <article class="card-body">
+              <span class="badge badge-success">jQuery</span><span class="badge badge-warning">CSS</span>
+              <span class="badge badge-info">HTML</span>
               <h5 class="card-title">Weather Dashboard</h5>
               <p class="card-text">A must-have dynamic weather dashboard utilising OpenWeatherMap API and built with
                 jQuery, HTML and Bootstrap.</p>
@@ -71,6 +129,8 @@
             <img class="card-img-top img-fluid" src="assets/images/password-small.png"
               alt="preview of password generator">
             <article class="card-body">
+              <span class="badge badge-primary">JavaScript</span><span class="badge badge-warning">CSS</span>
+              <span class="badge badge-info">HTML</span>
               <h5 class="card-title">Password Generator</h5>
               <p class="card-text">A handy random password generator built using JavaScript, CSS and HTML to create a
                 random password generator.</p>
@@ -85,6 +145,8 @@
           <div class="card mb-3">
             <img class="card-img-top img-fluid" src="assets/images/planner-small.png" alt="preview of Day Planner app">
             <article class="card-body">
+              <span class="badge badge-success">jQuery</span><span class="badge badge-warning">CSS</span>
+              <span class="badge badge-info">HTML</span>
               <h5 class="card-title">Define My Day Planner</h5>
               <p class="card-text">A simple day planner built with jQuery, responsive HTML and CSS, and using local storage and moment.js.</p>
               <a href="https://rubybassi.github.io/define-my-day-planner/" target="_blank"
@@ -98,6 +160,7 @@
           <div class="card mb-3">
             <img class="card-img-top img-fluid" src="assets/images/horiseon.png" alt="preview of Horiseon website">
             <article class="card-body">
+              <span class="badge badge-info">HTML</span>
               <h5 class="card-title">Code Refactoring for Accessibility</h5>
               <p class="card-text">Refactoring Horiseon's website to incorporate accessibility best practice and HTML5 semantics.</p>
               <a href="https://rubybassi.github.io/code-refactoring-accessibility/" target="_blank"
@@ -112,6 +175,7 @@
             <img class="card-img-top img-fluid" src="assets/images/css-grid.png"
               alt="preview of a responsive portfolio">
             <article class="card-body">
+              <span class="badge badge-warning">CSS</span><span class="badge badge-info">HTML</span>
               <h5 class="card-title">CSS Grid Responsive Portfolio</h5>
               <p class="card-text">A previous Google Scholarship project creating a responsive portfolio built using CSS grid.</p>
               <a href="https://rubybassi.github.io/Responsive-Portfolio/" target="_blank" class="btn btn-primary">Github
@@ -123,6 +187,7 @@
           <div class="card mb-3">
             <img class="card-img-top img-fluid" src="assets/images/animal-small.png" alt="picture of lion on a website">
             <article class="card-body">
+              <span class="badge badge-warning">CSS</span>
               <h5 class="card-title">Animal Trading Cards</h5>
               <p class="card-text">Styling trading cards with CSS gradient.</p>
               <a href="https://codepen.io/rubycodes/pen/YeLobx" target="_blank" class="btn btn-primary">Code Pen</a>
@@ -133,6 +198,7 @@
           <div class="card mb-3">
             <img class="card-img-top img-fluid" src="assets/images/pixel.png" alt="pixel art illustration">
             <article class="card-body">
+              <span class="badge badge-success">jQuery</span>
               <h5 class="card-title">Pixel Art Maker</h5>
               <p class="card-text">A fun pixel maker built using jQuery.</p>
               <a href="https://codepen.io/rubycodes/pen/RQGMWy" target="_blank" class="btn btn-primary">Code Pen</a>
