--- a/portfolio.html
+++ b/portfolio.html
@@ -50,8 +50,8 @@
               <h5 class="card-title">Sunaya</h5>
               <p class="card-text">Project two (group): a fullstack application designed to 
                 bring more mindfulness into your daily life.</p>
-              <a href="https://mysanaya.herokuapp.com/" target="_blank" class="btn btn-primary">Heroku page</a>
-              <a href="https://github.com/rubybassi/sanaya" target="_blank" class="btn btn-primary">Github repo</a>
+              <a href="https://mysanaya.herokuapp.com/" target="_blank" class="btn focus-btn">Heroku page</a>
+              <a href="https://github.com/rubybassi/sanaya" target="_blank" class="btn secondary-btn">Github repo</a>
             </article>
           </div>
         </div>
@@ -63,8 +63,8 @@
               <span class="badge badge-info">HTML</span>
               <h5 class="card-title">Handy Note Taker</h5>
               <p class="card-text">Note taking app that can be used to write, save, and delete notes built using node express.</p>
-              <a href="https://handy-note-taker-express.herokuapp.com/" target="_blank" class="btn btn-primary">Heroku page</a>
-              <a href="https://github.com/rubybassi/handy-note-taker" target="_blank" class="btn btn-primary">Github repo</a>
+              <a href="https://handy-note-taker-express.herokuapp.com/" target="_blank" class="btn focus-btn">Heroku page</a>
+              <a href="https://github.com/rubybassi/handy-note-taker" target="_blank" class="btn secondary-btn">Github repo</a>
             </article>
           </div>
         </div>
@@ -76,8 +76,8 @@
               <span class="badge badge-info">HTML</span>
               <h5 class="card-title">My Team Generator</h5>
               <p class="card-text">A Node CLI that takes in information about employees and generates an HTML webpage.</p>
-              <a href="https://www.youtube.com/watch?v=nbFUqCOI3fQ&feature=youtu.be" target="_blank" class="btn btn-primary">YouTube demo</a>
-              <a href="https://github.com/rubybassi/my-team-generator" target="_blank" class="btn btn-primary">Github repo</a>
+              <a href="https://www.youtube.com/watch?v=nbFUqCOI3fQ&feature=youtu.be" target="_blank" class="btn focus-btn">YouTube demo</a>
+              <a href="https://github.com/rubybassi/my-team-generator" target="_blank" class="btn secondary-btn">Github repo</a>
             </article>
           </div>
         </div>
@@ -88,8 +88,8 @@
               <span class="badge badge-dark">Node.js</span>
               <h5 class="card-title">Handy README Generator</h5>
               <p class="card-text">A Node CLI that dynamically generates a professional README.md file from a user's input using the Inquirer package.</p>
-              <a href="https://www.youtube.com/watch?v=M6oav3l6Iko&feature=youtu.be" target="_blank" class="btn btn-primary">YouTube demo</a>
-              <a href="https://github.com/rubybassi/handy-README-generator" target="_blank" class="btn btn-primary">Github repo</a>
+              <a href="https://www.youtube.com/watch?v=M6oav3l6Iko&feature=youtu.be" target="_blank" class="btn focus-btn">YouTube demo</a>
+              <a href="https://github.com/rubybassi/handy-README-generator" target="_blank" class="btn secondary-btn">Github repo</a>
             </article>
           </div>
         </div>
@@ -102,8 +102,8 @@
               <h5 class="card-title">SPACE-DASH</h5>
               <p class="card-text">Project one (group): a fun and interactive space app for young learners built using
                 five APIs including NASA and Mapbox.</p>
-              <a href="https://rubybassi.github.io/SPACE-DASH/" target="_blank" class="btn btn-primary">Github page</a>
-              <a href="https://github.com/rubybassi/SPACE-DASH" target="_blank" class="btn btn-primary">Github repo</a>
+              <a href="https://rubybassi.github.io/SPACE-DASH/" target="_blank" class="btn focus-btn">Github page</a>
+              <a href="https://github.com/rubybassi/SPACE-DASH" target="_blank" class="btn secondary-btn">Github repo</a>
             </article>
           </div>
         </div>
@@ -118,9 +118,9 @@
               <p class="card-text">A must-have dynamic weather dashboard utilising OpenWeatherMap API and built with
                 jQuery, HTML and Bootstrap.</p>
               <a href="https://rubybassi.github.io/show-me-the-weather-app/" target="_blank"
-                class="btn btn-primary">Github page</a>
+                class="btn focus-btn">Github page</a>
               <a href="https://github.com/rubybassi/show-me-the-weather-app" target="_blank"
-                class="btn btn-primary">Github repo</a>
+                class="btn secondary-btn">Github repo</a>
             </article>
           </div>
         </div>
@@ -135,9 +135,9 @@
               <p class="card-text">A handy random password generator built using JavaScript, CSS and HTML to create a
                 random password generator.</p>
               <a href="https://rubybassi.github.io/cool-password-generator/" target="_blank"
-                class="btn btn-primary">Github page</a>
+                class="btn focus-btn">Github page</a>
               <a href="https://github.com/rubybassi/cool-password-generator" target="_blank"
-                class="btn btn-primary">Github repo</a>
+                class="btn secondary-btn">Github repo</a>
             </article>
           </div>
         </div>
@@ -150,9 +150,9 @@
               <h5 class="card-title">Define My Day Planner</h5>
               <p class="card-text">A simple day planner built with jQuery, responsive HTML and CSS, and using local storage and moment.js.</p>
               <a href="https://rubybassi.github.io/define-my-day-planner/" target="_blank"
-                class="btn btn-primary">Github page</a>
+                class="btn focus-btn">Github page</a>
                 <a href="https://github.com/rubybassi/define-my-day-planner" target="_blank"
-                class="btn btn-primary">Github repo</a>
+                class="btn secondary-btn">Github repo</a>
             </article>
           </div>
         </div>
@@ -164,9 +164,9 @@
               <h5 class="card-title">Code Refactoring for Accessibility</h5>
               <p class="card-text">Refactoring Horiseon's website to incorporate accessibility best practice and HTML5 semantics.</p>
               <a href="https://rubybassi.github.io/code-refactoring-accessibility/" target="_blank"
-                class="btn btn-primary">Github page</a>
+                class="btn focus-btn">Github page</a>
                 <a href="https://github.com/rubybassi/code-refactoring-accessibility" target="_blank"
-                class="btn btn-primary">Github repo</a>
+                class="btn secondary-btn">Github repo</a>
             </article>
           </div>
         </div>
@@ -178,7 +178,7 @@
               <span class="badge badge-warning">CSS</span><span class="badge badge-info">HTML</span>
               <h5 class="card-title">CSS Grid Responsive Portfolio</h5>
               <p class="card-text">A previous Google Scholarship project creating a responsive portfolio built using CSS grid.</p>
-              <a href="https://rubybassi.github.io/Responsive-Portfolio/" target="_blank" class="btn btn-primary">Github
+              <a href="https://rubybassi.github.io/Responsive-Portfolio/" target="_blank" class="btn focus-btn">Github
                 Page</a>
             </article>
           </div>
@@ -190,7 +190,7 @@
               <span class="badge badge-warning">CSS</span>
               <h5 class="card-title">Animal Trading Cards</h5>
               <p class="card-text">Styling trading cards with CSS gradient.</p>
-              <a href="https://codepen.io/rubycodes/pen/YeLobx" target="_blank" class="btn btn-primary">Code Pen</a>
+              <a href="https://codepen.io/rubycodes/pen/YeLobx" target="_blank" class="btn focus-btn">Code Pen</a>
             </article>
           </div>
         </div>
@@ -201,17 +201,7 @@
               <span class="badge badge-success">jQuery</span>
               <h5 class="card-title">Pixel Art Maker</h5>
               <p class="card-text">A fun pixel maker built using jQuery.</p>
-              <a href="https://codepen.io/rubycodes/pen/RQGMWy" target="_blank" class="btn btn-primary">Code Pen</a>
-            </article>
-          </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="card mb-3">
-            <img class="card-img-top img-fluid" src="assets/images/github.png" alt="preview of Github website ">
-            <article class="card-body">
-              <h5 class="card-title">GITHUB</h5>
-              <p class="card-text">My Github repo.</p>
-              <a href="https://github.com/rubybassi" target="_blank" class="btn btn-primary">Github</a>
+              <a href="https://codepen.io/rubycodes/pen/RQGMWy" target="_blank" class="btn focus-btn">Code Pen</a>
             </article>
           </div>
         </div>
