--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </div>
                 <div class="col-sm-7 px-3">    
                     <p class="lead">
-                        Hi, i'm Sandy – a web developer in the making. 
+                        Hi, I'm Sandy – a web developer in the making. 
                     </p>    
                     <p class="lead">
                         I'm currently on an exciting journey with the University of Birmingham Bootcamp and i'm loving every minute of it! 
@@ -48,7 +48,7 @@
                         My passion for coding has comes from my love of problem solving and design - the joy in that moment when i find a solution to something that's been bugging me, whether 
                         it's working on spreadsheets in my day job as a Marketing Manager or creating something from scratch such as arts and craft. 
                     <p class="lead">
-                        I look forward to building websites and applications that can address real-world problems. If you're looking for professional, junior fullstack deleveloper, <a href="contact.html">let's connect!</a>
+                        I look forward to building websites and applications that can address real-world problems. If you're looking for professional, junior fullstack developer, <a href="contact.html">let's connect!</a>
                     </p>   
                 </div>
             </div>    
